--- a/index.html
+++ b/index.html
@@ -1,15 +1,20 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;900&display=swap" rel="stylesheet">
+    
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DevOps</title>
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
         <header>
             <div>
-                <img src="https://lh3.googleusercontent.com/1yYjfVACv2sBbKImSZtodl5SDVltGj2DWFu11hegr50XNsVYEy-xxSimNVN5jbkjUtH5RVevSJmFglsLBFfyK2ZB0GDe5XzKr5OPhhniRB75PjoL9SW8hT3Q10Ou8_QYxyjVa0vMMNGpC1Z-mHVAuyaMXhsVcLY9ZJn4oTTwOtFbSMOK3OWPmgw-LwtaMXMzsvOuvxjWNan8zbI8han2l7ts9qyrper3TL_sokxT9qt3dEMsev6iS-1y36lBsU-MInUa9ofrwzrc-PFDKXJkNnbXY4GzU19c85Ui8cBCyTIsHOIVLo9E8J5c0JnPskzg1Lr7cj4hs8o2QmWkE4ukDOuB9zi1p5JYVkLuNpbSJqBTk42zSH-HYMsKJQFK77Bwry51vPGsRnxqkraMVWGFA7GKykKezFHrmzf_0AQ3WFhk3Ei5X4-3T5lRTcl8AdnBIuSyBxPCrf86wvmL1qne9LBhwkYfMkO-mUa9WBPXgn41CPteOKk0GpBlbDF7kxsDFC2fciy8oNzVr7Q3TvN11uQhncLU_Sr1Mpk9zOuCaJbf27lxEumo1NvIR9rwVFscbGMI7n0mBhNi95aSfL4rrUpHGVDkJ3yqBmlLWt_3P94EdAYThkPYQuSNuqSvCsmJiQuZX8RtnoAJvzRVxX_B4SuKX2OvgYOK_Q2fwTFQ4nFQWi5feBLA59v_MetVRLnu8dFhxlFJmJ0_2lVlz4fTpreU-gMlU3oxH-Ylm6OzJCcLO1AkfBWR9WVZLQQOJ-lktUDAaMBTKALItasJStbLvyqPSfx0eDdNcH8gRmbEEsuSc30mYL7kQuLPV0GL3cI9f_0NZmOrctwsI30Ak_ndXauwrtMgdrIzhiH1gSwIHWqSF3OHLEHkvu2iUAi2MVEVRIzR5FJsp-N83jn9H5dhZ40d8JrZKjQWuqAQ6il-3bVj_s6nAxVkVjZ4-02mDxL907fi7-sbBMADs7ZfvmKgcmQ=w545-h968-no?authuser=0" alt="img github">
+                <!-- <img src="https://i.pinimg.com/564x/fc/cf/6f/fccf6fe312f6e8e295b5b36ed218090d.jpg" alt="img github"> -->
             </div>
         </header>
 
@@ -23,28 +28,32 @@
                             <a 
                                 target="_blank"
                                 href="https://www.docker.com/">
-                                <img src="https://airflow.apache.org/docs/docker-stack/_images/docker-logo.png" alt="imagem docker">
+                                <!-- <img src="https://airflow.apache.org/docs/docker-stack/_images/docker-logo.png" alt="imagem docker"> -->
+                                <img src="./assets/docker.jpg" alt="imagem docker">
                             </a>
                         </li>
                         <li>
                             <a 
                                 target="_blank"
                                 href="https://cloud.google.com/">                                              
-                                <img src="https://cloud.google.com/_static/cloud/images/social-icon-google-cloud-1200-630.png?hl=pt-br" alt="imagem google cloud">
+                                <!-- <img src="https://cloud.google.com/_static/cloud/images/social-icon-google-cloud-1200-630.png?hl=pt-br" alt="imagem google cloud"> -->
+                                <img src="./assets/gcp.jpg" alt="imagem google cloud">
                             </a>
                         </li>
                         <li>
                             <a 
                                 target="_blank"
                                 href="https://aws.amazon.com/pt/">                                              
-                                <img src="https://a0.awsstatic.com/libra-css/images/logos/aws_logo_smile_1200x630.png" alt="imagem aws">
+                                <!-- <img src="https://a0.awsstatic.com/libra-css/images/logos/aws_logo_smile_1200x630.png" alt="imagem aws"> -->
+                                <img src="./assets/aws.jpg" alt="imagem aws">
                             </a>
                         </li>
                         <li>
                             <a 
                                 target="_blank"
                                 href="https://www.terraform.io/">                                              
-                                <img src="https://www.datocms-assets.com/58478/1640019487-og-image.png" alt="imagem terraform">
+                                <!-- <img src="https://www.datocms-assets.com/58478/1640019487-og-image.png" alt="imagem terraform"> -->
+                                <img src="./assets/terraform.jpg" alt="imagem terraform">
                             </a>
                         </li>
                     </ul>
