alteração no header

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
         <header>
             <div>
-                <!-- <img src="https://i.pinimg.com/564x/fc/cf/6f/fccf6fe312f6e8e295b5b36ed218090d.jpg" alt="img github"> -->
+                <img src="https://avatars.githubusercontent.com/u/35042879?v=4" alt="img face">
             </div>
         </header>
 
